<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="80dp"
    android:src="@drawable/img_walkthrough_tracking_transactions"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/tutorial_1"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:textSize="25sp" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:text="@string/tutorial_2"
    android:layout_marginStart="10dp"
    android:textSize="18sp" />

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/deal_Details"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:background="@color/white">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginStart="10dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDealGroup"
        android:text="@string/common_outcome"
        android:textColor="@android:color/holo_green_dark"
        android:focusableInTouchMode="false"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:id="@+id/date_Deal"
        android:text="@string/tutorial_4"
        android:textColor="@color/com_facebook_button_background_color" />

    </RelativeLayout>

    <View
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginEnd="5dp"
      android:layout_marginStart="5dp"
      android:layout_marginTop="@dimen/nav_drawer_vertical_spacing_listing_divider_top"
      android:background="@color/black"
      android:focusable="false"
      android:focusableInTouchMode="false"/>

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:layout_marginStart="10dp"
      android:layout_marginBottom="5dp">

      <ImageView
        android:id="@+id/icon_transection"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/ic_category_foodndrink" />

      <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/icon_transection">

        <TextView
          android:id="@+id/txt_deal_group_details"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="12dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="5dp"
          android:padding="2dp"
          android:text="@string/tutorial_6"
          android:textColor="@color/black" />


        <TextView
          android:id="@+id/txtDealDetail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="11dp"
          android:layout_marginStart="12dp"
          android:padding="2dp"
          android:inputType="text|textMultiLine"
          android:scrollHorizontally="false"
          android:maxLines ="4"
          android:text="@string/tutorial_7"
          android:textColor="@color/blue_500" />


      </LinearLayout>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDealMoney"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:textColor="#E84A5F"
        android:text="@string/tutorial_5"/>

    </RelativeLayout>

  </LinearLayout>

</LinearLayout>
