<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:orientation="vertical"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green"
    android:layout_marginTop="50dp">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:src="@drawable/img_splash_icon"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/app_name"
      android:gravity="center"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:textSize="25sp"
      android:textColor="@color/white"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/tutorial_16"
      android:gravity="center"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:textSize="15sp"
      android:textColor="@color/white"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/tutorial_17"
      android:gravity="center"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:textSize="15sp"
      android:textColor="@color/white"/>

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp">

      <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/help1">

        <ImageView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:src="@drawable/icon_android"/>

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="@string/nav_drawer_item_help"
          android:gravity="center"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:textSize="20sp"
          android:textColor="@color/white"/>

      </TableLayout>

      <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:id="@+id/help2">

        <ImageView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:src="@drawable/ic_about_help"/>

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="@string/tutorial_15"
          android:gravity="center"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:textSize="20sp"
          android:textColor="@color/white"/>

      </TableLayout>

    </RelativeLayout>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:text="@string/tutorial_18"
      android:gravity="center"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:textSize="15sp"
      android:textColor="@color/white"/>

  </LinearLayout>

</LinearLayout>
