<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/activity_create_plan">

  <include
    layout="@layout/toolbar_save_plan" />


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="60dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="20dp"
    android:background="@color/white">


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="10dp">

      <ImageView
        android:id="@+id/imageGroup"
        android:layout_gravity="center"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/icon_not_selected" />

      <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/pickGroup"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:focusable="false"
        android:textSize="25sp"
        android:hint="@string/common_pick_group" />

    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/edit_Money"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="10dp"
      android:scrollHorizontally="false"
      android:maxLength ="13"
      android:ems="10"
      android:textColor="@color/black"
      android:background="@color/white"
      android:singleLine="true"
      android:inputType="numberDecimal"
      android:hint="@string/common_edit_money"
      android:digits="0123456789.,"
      app:met_iconLeft="@drawable/ic_currency"
      app:met_floatingLabel="highlight"
      app:met_baseColor="#0056d3"
      app:met_primaryColor="#982360"
      app:met_errorColor="#ddaa00" />

    <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/edit_Detail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:inputType="text|textMultiLine"
      android:hint="@string/common_note"
      android:singleLine="true"
      android:maxLength ="80"
      app:met_maxCharacters="80"
      app:met_floatingLabel="highlight"
      app:met_baseColor="#0056d3"
      app:met_primaryColor="#982360"
      app:met_errorColor="#ddaa00"
      app:met_iconLeft="@drawable/ic_adjustment"/>

    <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/edit_Date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:focusable="false"
      android:hint="@string/common_date_pick"
      app:met_floatingLabel="highlight"
      app:met_baseColor="#0056d3"
      app:met_primaryColor="#982360"
      app:met_errorColor="#ddaa00"
      app:met_iconLeft="@drawable/ic_calendar"/>

  </LinearLayout>

</LinearLayout>
