<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <include
    layout="@layout/toolbar_save_plan" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="20dp"
    android:background="@color/white">


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="10dp">

      <ImageView
        android:id="@+id/pGroupImg"
        android:layout_gravity="center"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/icon_not_selected" />

      <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/pGroupDetails"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:focusable="false"
        android:textSize="25sp"
        android:hint="@string/common_pick_group" />

    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/edit_Money_Plan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="10dp"
      android:scrollHorizontally="false"
      android:maxLength ="13"
      android:ems="10"
      android:textColor="@color/black"
      android:background="@color/white"
      android:singleLine="true"
      android:inputType="numberDecimal"
      android:hint="@string/common_edit_money"
      android:digits="0123456789.,"
      app:met_iconLeft="@drawable/ic_currency"
      app:met_floatingLabel="highlight"
      app:met_baseColor="#0056d3"
      app:met_primaryColor="#982360"
      app:met_errorColor="#ddaa00" />

    <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/edit_Detail_Plan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:inputType="text|textMultiLine"
      android:hint="@string/common_note"
      android:singleLine="true"
      android:maxLength ="80"
      app:met_maxCharacters="80"
      app:met_floatingLabel="highlight"
      app:met_baseColor="#0056d3"
      app:met_primaryColor="#982360"
      app:met_errorColor="#ddaa00"
      app:met_iconLeft="@drawable/ic_adjustment"/>

    <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/edit_Date_Plan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:focusable="false"
      android:hint="@string/common_date_pick"
      app:met_floatingLabel="highlight"
      app:met_baseColor="#0056d3"
      app:met_primaryColor="#982360"
      app:met_errorColor="#ddaa00"
      app:met_iconLeft="@drawable/ic_calendar"/>

  </LinearLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:background="@color/white">

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true">

      <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_delete"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/delete_plan"/>

    </RelativeLayout>

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentStart="true">

      <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_transfer_money"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/tranfer_plan"/>

    </RelativeLayout>
  </RelativeLayout>

</RelativeLayout>
