<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/listView_Deal_Header">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:background="@color/white" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_overview"
                android:layout_marginEnd="10dp"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xx-xxxx"
                android:textColor="@color/darkorange"
                android:textSize="20sp"
                android:id="@+id/comon_overview" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_dropdown"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/devider1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginBottom="@dimen/nav_drawer_vertical_spacing_listing_divider_bottom"
            android:layout_marginTop="@dimen/nav_drawer_vertical_spacing_listing_divider_top"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_income"
                android:textSize="15dp"
                android:id="@+id/inBount"
                />

            <TextView
                android:id="@+id/total_incomeMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/blue_500"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_outcome"
                android:textSize="15dp"
                android:id="@+id/outBount"
                />

            <TextView
                android:id="@+id/total_outcomeMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#FF0000"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

        <View
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/devider2"
            android:layout_width="wrap_content"
            android:layout_marginLeft="270dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginBottom="@dimen/nav_drawer_vertical_spacing_listing_divider_bottom"
            android:layout_marginTop="@dimen/nav_drawer_vertical_spacing_listing_divider_top"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >

            <TextView
                android:id="@+id/total_Money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </TableLayout>

    <View
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/grey_200"/>


</LinearLayout>